--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
     align-items: flex-start;
     gap: 20px;
     width: 100%;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   #probabilidades-container {
@@ -19,20 +21,18 @@
     margin-bottom: 20px;
     width: 90%;
     max-width: 1200px;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
   }
 
   body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     background-color: #2c3e50;
     color: #ecf0f1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    overflow: hidden;
   }
 
   .setup {
@@ -86,8 +86,8 @@
       }
       .juego-container {
           display: grid;
-          grid-template-columns: 200px 1fr 200px;
-          grid-template-rows: 200px 1fr 200px;
+          grid-template-columns: 175px 1fr 175px;
+          grid-template-rows: 175px 1fr 175px;
           gap: 20px;
           flex-grow: 1;
       }
@@ -105,6 +105,7 @@
     align-items: center;
     justify-content: flex-start;
     min-height: 400px;
+    width: 100%;
   }
 
 
@@ -295,13 +296,15 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 25%;
-    max-width: 300px;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+    max-width: 75%;
   }
 
   .historial,
   .marcador,
   .instrucciones {
+    margin-top: 20px;
     background-color: #34495e;
     border: 2px solid #ecf0f1;
     border-radius: 10px;
@@ -310,25 +313,26 @@
     height: auto;
     overflow: auto;
   }
+  .instrucciones{
+    margin-left: 12.5%;
+    margin-right: 10%;
+  }
 
   .historial {
-    max-height: 900px;
+    max-height: 300px;
+    width: 100%;
     overflow-y: auto;
     background-color: #34495e;
     border: 2px solid #ecf0f1;
     border-radius: 10px;
     padding: 20px;
     color: #ecf0f1;
+    font-size: 32px;
   }
 
   .layout-container {
-    display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    gap: 20px;
-    width: 90%;
-    max-width: 1400px;
   }
 
   .marcador {
@@ -336,6 +340,8 @@
   }
 
   .juego-container {
+  margin-left: 20px;
+  margin-right: 20px;
     display: grid;
     grid-template-columns: 200px 1fr 200px;
     grid-template-rows: 200px 1fr 200px;
@@ -353,12 +359,11 @@
     }
 
     .juego-container {
-      width: 100%;
+      width: 90%;
     }
 
     .info-container {
       width: 100%;
-      max-width: none;
     }
   }
 
